--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"axios": "^0.22.0",
-		"svelte-table": "^0.2.0",
+		"@sveltejs/adapter-vercel": "^1.0.0-next.30",
 		"sveltestrap": "^5.6.3"
 	}
 }
